# graphicengine

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  class_camera-members.html  class_camera.html  class_camera.js  class_color-members.html  class_color.html  class_color.js  class_color_pass-members.html  class_color_pass.html  class_color_pass.js  class_directional_light-members.html  class_directional_light.html  class_directional_light.js  class_engine-members.html  class_engine.html  class_engine.js  class_forward_opaque3_d_pass-members.html  class_forward_opaque3_d_pass.html  class_forward_opaque3_d_pass.js  class_forward_renderer3_d_layer-members.html  class_forward_renderer3_d_layer.html  class_input-members.html  class_input.html  class_input.js  class_lights-members.html  class_lights.html  class_lights.js  class_material-members.html  class_material.html  class_material.js  class_mesh-members.html  class_mesh.html  class_mesh.js  class_mesh_thing-members.html  class_mesh_thing.html  class_mesh_thing.js  (+152 more)
demos/sponza/: CMakeLists.txt  main.cpp
docs/: ShaderGen.md
docs/guides/: entity.md  prvni-projekt.md  spusteni-enginu.md  svetla.md
ext/glad/: CMakeLists.txt  glad.c
ext/glad/include/glad/: glad.h
ext/glfw/: CMakeLists.txt
ext/glm/: CMakeLists.txt
include/: coordinates.h  gameengine.hpp  gereferences.hpp  graphicengine.hpp  input.hpp  lights.hpp  meshes.hpp  renderer.hpp  shaders.hpp  textures.hpp  things.hpp  utils.h
res/shaders/: obj_no_normal.glsl  obj_phong.glsl  vertex_shader_template.glsl
res/shaders/templates/: obj_no_normal.glsl  obj_phong.glsl  vertex_shader_template.glsl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+57 more)
shaders/templates/: phong.glsl  vertex_shader_template.glsl
src/: coordinates.cpp  gameengine.cpp  gereferences.cpp  graphicengine.cpp  input.cpp  lights.cpp  meshes.cpp  renderer.cpp  shaders.cpp  textures.cpp  things.cpp  utils.cpp
